# hsecpp

./: CMakeLists.txt  sortLibrary.cpp  startvim.cpp
contest5/: remove_copy_if.cpp  reverse_copy.cpp  set_difference.cpp  unique.cpp
contest6/: a.out  a0.cpp  a1.cpp  a2.cpp  a3.cpp  a4.cpp  a5.cpp  a6.cpp  a8.cpp  a9.cpp  atext.txt
contest7/: Complex.cpp  Matrix.cpp  Rational.cpp  a0.cpp  a1.cpp  checkmatrix.cpp
contest8/: Polynomial(dense).cpp  Polynomial(sparse).cpp
contest9/: a0.cpp
sortString/: CMakeLists.txt  main.cpp
